--- a/Index.html
+++ b/Index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h2>Hello World!</h2>
+    <p>Add some text in paragraph area</p>
+    <p>Add some text in paragraph area</p>
+    <p>Add some text in paragraph area</p>
 </body>
 </html>
